--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.1",
+    "react-tsparticles": "^1.39.0",
     "sass": "^1.47.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.2"
