--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-juicer-feed": "0.0.2-alpha-4",
     "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.1",
     "sass": "^1.47.0",
